<resources>
    <string name="app_name">A3 Audientes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="audioGram_left">The air conduction results for the left ear are marked with a blue… "X"</string>
    <string name="audioGram_right">The air conduction results for the right ear are marked with a red…     "O"</string>
    <string name="enabel_bluetooth">This app requires that bluetooth is enabled, to connect your device to the Audientes hearing aid</string>
    <string name="audientes">Audientes</string>
    <string name="bottom_sheet_peek">peek</string>
    <string name="bottom_sheet_content">content</string>
    <string name="cancel">Cancel</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_two_buttons_title">Title man</string>
    <string name="BoxedVertical_defaultImage">"@drawable/xml_fg_volumelevel"</string>
    <string name="BoxedVertical_minImage">"@drawable/xml_fg_volumelevel"</string>
    <string name="BoxedVertical_maxImage">"@drawable/xml_fg_volumelevel"</string>

    <string name="plus">x</string>
    <string name="connect_device">Connect Device</string>
    <string name="home_btn">Home</string>
    <string name="loud_btn">Loud</string>
    <string name="quiet_btn">Quiet</string>
    <string name="new_visitor_pref">newVisitor</string>
    <string name="search_for_devices">Search for devices</string>
    <string name="cntnue">Continue</string>
    <string name="select_lan">Select your language</string>
    <string name="programs">Programs</string>
    <string name="pair">Pairing device…</string>
    <string name="lowplus">low+</string>
    <string name="low">low</string>
    <string name="medium">medium</string>
    <string name="high">high</string>
    <string name="highplus">high+</string>
    <string name="minchar">Min 1 characters</string>
    <string name="maxchar">Max 5 characters</string>
    <string name="searchdevice">Searching for devices</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="randlear">Right &amp; Left Ear</string>
    <string name="audiogram">Audiogram</string>
    <string name="select">Select</string>
    <string name="wantToDelete">Are you sure you want to delete this program?</string>
    <string name="delete_program">Delete program</string>
    <string name="are_you_sure">Quit without saving?</string>
    <string name="changes_made_will_not_be_saved">Changes made will not be saved!</string>
    <string name="yes">Yes</string>
    <string name="hearing_profile">Hearing Profile</string>
    <string name="press_button_when_you_hear_a_sound">Press button when you hear a sound</string>
    <string name="searching_for_devices">Turn on your Audientes Hearable</string>
    <string name="settings">Settings</string>
    <string name="name_of_program">Name of Program</string>
    <string name="save_changes">Save Changes</string>
    <string name="confirm">Confirm</string>
    <string name="left">L</string>
    <string name="middle">LR</string>
    <string name="shortR">R</string>
    <string name="ShortR" translatable="false">R</string>
    <string name="skip">Skip</string>
    <string name="test_will_take_5_minutes_npress_button_to_start">Test will take 5 minutes. Press button to start</string>
    <string name="hearing_test">Hearing Test</string>
    <string name="take_new_test">Take New Test</string>
    <string name="active_test">Active Test</string>
    <string name="audiogram_n_archive">Archive</string>
    <string name="newest_hearing_test">Newest hearing test:</string>
    <string name="selected_audiogram">Selected audiogram</string>
    <string name="windy">Windy</string>

    <string name="test_finished">Test complete</string>
    <string name="test_finished_text"> You will be able to see the \n result graph on the ‘Hearing Test’ screen</string>
    <string name="okay">Okay</string>
    <string name="hearable_icon">hearable icon</string>
    <string name="icon_container">icon container</string>
    <string name="icon_shader">icon shader</string>
    <string name="underline_edit_program">underline edit program</string>
    <string name="heard_noise_button">Heard Noise button</string>
    <string name="start_hearing_test_btn">start hearing test btn</string>
    <string name="confirm_language">confirm language</string>
    <string name="background_image">background image</string>
    <string name="speaker_icon">speaker icon</string>
    <string name="slidehead1">Welcome to Audientes</string>
    <string name="slidehead2">Your surroundings</string>
    <string name="slidehead3">Let\'s get started</string>
    <string name="slidehead4">How to delete programs</string>
    <string name="slidehead5">How to edit a program</string>
    <string name="slidehead6">How to start a Hearing Test</string>
    <string name="slidedesc1">Your hearable will work optimally when you perform a hearing test using the built-in Pure Tone Audiometry, just like when visiting a hearing specialist.</string>
    <string name="slidedesc2">Before starting the hearing test, we check the surrounding noise level, if it is greater than expected value, we would suggest that the user find another quiet place.</string>
    <string name="slidedesc3">You will be asked to wear the hearable and sit in a quiet area free for disturbing sounds and other factors. A series of sounds will be broadcast through the earphones. It will measure your ability to hear sounds at various pitches and volumes.</string>
    <string name="slidedesc4">When deleting a program, you will need to click on the \'x\' button in order to delete it. If a program does not have a \'x\' in the upper right corner, it means that it is a default program and cannot be deleted.</string>
    <string name="slidedesc5">In order to edit a program, a default or custom program, you will need to click and hold the button - otherwise you will only select the program.</string>
    <string name="slidedesc6">In order to be able to start the hearing test, you\'ll need to allow this application to use the mic, because the upper right corner display the sound level and only if it is green you can take the hearing test.</string>

</resources>
