<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/custom_popup"
    android:layout_margin="64sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_program"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_margin="16sp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/wantToDelete"
        android:gravity="center"
        android:textColor="@color/lightPurple"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10sp"
       />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="10sp"
        android:layout_marginRight="50sp"
        android:layout_marginBottom="10sp"
        android:background="@color/transparentWhite" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginBottom="10sp">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/darkerOrange"
            android:textSize="22sp"
            android:background="@drawable/custom_popup_btn_left"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_popup_btn_right"
            android:text="@string/yes"

            android:textColor="@color/lightGreen"
            android:textSize="22sp" />

    </LinearLayout>



</LinearLayout>